--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
   "dependencies": {
     "@blueprintjs/core": "^3.18.0",
     "axios": "^0.19.0",
-    "d2note-core": "file:d2note-core",
+    "mercury": "file:mercury-core",
     "moment": "^2.24.0",
+    "monaco-editor": "^0.17.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
