--- a/mercury-core/package.json
+++ b/mercury-core/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "moment": "^2.24.0"
+  },
+  "devDependencies": {
+    "observeable-object-js": "file:../../observeable-object-js"
   }
 }
