--- a/mercury-core/package.json
+++ b/mercury-core/package.json
@@ -11,9 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
-    "moment": "^2.24.0"
-  },
-  "devDependencies": {
-    "observeable-object-js": "file:../../observeable-object-js"
+    "moment": "^2.24.0",
+    "observeable-object-js": "^1.0.1"
   }
 }
