--- a/mercury-core/package.json
+++ b/mercury-core/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "jsdom": "^15.1.1",
     "moment": "^2.24.0",
     "observeable-object-js": "^1.0.1"
   }
