--- a/mercury-core/package.json
+++ b/mercury-core/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "jsdom": "^15.1.1",
+    "lit-html": "^1.1.2",
     "moment": "^2.24.0",
     "observeable-object-js": "^1.0.1"
   }
