--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "0.3.1",
-    "mercury-core": "file:mercury-core",
+    "mercury-core": "file:modules/core",
     "mini-css-extract-plugin": "0.5.0",
     "moment": "^2.24.0",
     "monaco-editor": "^0.17.1",
