--- a/modules/core/package.json
+++ b/modules/core/package.json
@@ -7,6 +7,8 @@
     "clean": "node_modules/.bin/rimraf ./dist",
     "build": "node_modules/.bin/npm-run-all clean build:*",
     "build:module": "node_modules/.bin/webpack --config webpack.config.js",
+    "fix": "npm-run-all clean fix:*",
+    "fix:style": "node_modules/.bin/standard --fix",
     "test": "node_modules/.bin/npm-run-all test:*",
     "test:unit-test": "node_modules/.bin/jest --config jest.config.js",
     "test:checkstyle": "node_modules/.bin/standard --verbose"
