--- a/modules/core/package.json
+++ b/modules/core/package.json
@@ -62,6 +62,7 @@
     ]
   },
   "dependencies": {
+    "esprima": "^4.0.1",
     "jsdom": "^15.1.1",
     "lit-html": "^1.1.2",
     "moment": "^2.24.0",
