--- a/package.json
+++ b/package.json
@@ -86,7 +86,9 @@
     "react-dev-utils": "^9.0.3",
     "react-dom": "^16.9.0",
     "react-inspector": "^3.0.2",
+    "react-redux": "^7.1.1",
     "react-resizable": "^1.8.0",
+    "react-router-dom": "^5.1.2",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
