--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "jest-watch-typeahead": "0.3.1",
     "jsdom": "^15.1.1",
     "lowdb": "^1.0.0",
+    "medium-editor-custom-html": "^1.1.0",
     "mercury-core": "file:modules/core",
     "mini-css-extract-plugin": "0.5.0",
     "moment": "^2.24.0",
