IMPROVE-33 IMPORT Quilljs

--- a/package.json
+++ b/package.json
@@ -69,8 +69,6 @@
     "jest-watch-typeahead": "0.3.1",
     "jsdom": "^15.1.1",
     "lowdb": "^1.0.0",
-    "medium-editor-custom-html": "^1.1.0",
-    "medium-editor-mercury-extend": "file:modules/plugins/medium-editor/merecury-extend",
     "mercury-core": "file:modules/core",
     "mini-css-extract-plugin": "0.5.0",
     "moment": "^2.24.0",
@@ -84,12 +82,12 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "quill": "^1.3.7",
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.2",
     "react-dev-utils": "^9.0.3",
     "react-dom": "^16.9.0",
     "react-inspector": "^3.0.2",
-    "react-medium-editor": "^1.8.1",
     "react-redux": "^7.1.1",
     "react-resizable": "^1.8.0",
     "react-router-dom": "^5.1.2",
