--- a/package.json
+++ b/package.json
@@ -83,9 +83,10 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
     "quill": "^1.3.7",
+    "quill-better-table": "^1.2.4",
+    "quill-blot-formatter": "^1.0.5",
     "quill-image-drop-module": "^1.0.3",
-    "quill-image-resize-module": "^3.0.0",
-    "quill-video-resize-module": "^1.0.2",
+    "quill-magic-url": "^1.0.3",
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.2",
     "react-dev-utils": "^9.0.3",
