--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "react-resizable": "^1.8.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
+    "redux-saga": "^1.1.3",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
