Replace resize library

--- a/package.json
+++ b/package.json
@@ -87,13 +87,13 @@
     "quill-blot-formatter": "^1.0.5",
     "quill-image-drop-module": "^1.0.3",
     "quill-magic-url": "^1.0.3",
+    "re-resizable": "^6.1.0",
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.2",
     "react-dev-utils": "^9.0.3",
     "react-dom": "^16.9.0",
     "react-inspector": "^3.0.2",
     "react-redux": "^7.1.1",
-    "react-resizable": "^1.8.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.3",
