--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
+    "electron-context-menu": "^0.15.1",
     "electron-prompt": "^1.4.0",
     "eslint": "^6.1.0",
     "eslint-config-react-app": "^5.0.1",
