--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "0.3.1",
     "jsdom": "^15.1.1",
+    "lodash": "^4.17.15",
     "lowdb": "^1.0.0",
     "mercury-core": "file:modules/core",
     "mini-css-extract-plugin": "0.5.0",
@@ -79,6 +80,7 @@
     "monaco-editor-webpack-plugin": "^1.7.0",
     "node-sass": "^4.12.0",
     "npm": "^6.13.2",
+    "npm-programmatic": "0.0.12",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
