IMPROVE-65 Added application info in exported note file

--- a/src/application.json
+++ b/src/application.json
@@ -1,4 +1,5 @@
 {
   "name": "Mercury",
-  "version": "1.0.0-alpha"
+  "version": "1.0.0-alpha",
+  "downloadUrl": "https://github.com/cloverhearts/mercury/releases"
 }
