--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/core": "7.5.5",
     "@blueprintjs/core": "^3.18.0",
     "@fortawesome/fontawesome-free": "^5.11.2",
+    "@openfonts/nanum-gothic_korean": "^1.44.0",
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
@@ -79,6 +80,7 @@
     "monaco-editor": "^0.17.1",
     "monaco-editor-webpack-plugin": "^1.7.0",
     "node-sass": "^4.12.0",
+    "notosans-fontface": "^1.1.0",
     "npm": "^6.13.2",
     "npm-programmatic": "0.0.12",
     "optimize-css-assets-webpack-plugin": "5.0.3",
@@ -88,6 +90,7 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "puppeteer": "^2.0.0",
     "quill": "^1.3.7",
     "quill-better-table": "^1.2.4",
     "quill-image-drop-module": "^1.0.3",
