--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node scripts/start.js",
     "postinstall": "electron-builder install-app-deps",
     "build-script": "cross-env MERCURY_ENV=production cross-env PUBLIC_URL=MERCURY/WEBAPP/PATH node scripts/build.js",
-    "build": "cross-env MERCURY_ENV=production npm-run-all build:win",
+    "build": "cross-env MERCURY_ENV=production npm-run-all build:osx build:win build:linux",
     "build:osx": "electron-builder --mac",
     "build:linux": "cross-env MERCURY_ENV=production npm-run-all build-script build:linux:*",
     "build:linux:32": "electron-builder --linux --ia32",
@@ -64,6 +64,7 @@
     "file-loader": "3.0.1",
     "files-download-zip": "^3.1.1",
     "fs-extra": "7.0.1",
+    "hello-mercury": "^1.0.1",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
@@ -212,18 +213,18 @@
       "target": [
         "default"
       ],
-      "icon": "./resources/installer/Icon.icns"
+      "icon": "./assets/icons/mac/icon.icns"
     },
     "dmg": {
       "title": "mercury",
-      "icon": "./resources/installer/Icon.icns"
+      "icon": "./assets/icons/mac/icon.icns"
     },
     "win": {
       "target": [
         "zip",
         "nsis"
       ],
-      "icon": "./resources/installer/Icon.ico"
+      "icon": "assets/icons/win/icon.icns"
     },
     "linux": {
       "target": [
@@ -233,7 +234,7 @@
         "zip",
         "tar.gz"
       ],
-      "icon": "./resources/linuxicon"
+      "icon": "assets/icons/png/icon_32x32.png"
     },
     "nsis": {
       "oneClick": false,
