--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mercury",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Mercury - Data discovery and definition  with note system",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "start": "node scripts/start.js",
     "postinstall": "electron-builder install-app-deps",
     "build-script": "cross-env MERCURY_ENV=production cross-env PUBLIC_URL=MERCURY/WEBAPP/PATH node scripts/build.js",
-    "build": "cross-env MERCURY_ENV=production npm-run-all build:osx build:win build:linux",
+    "build": "cross-env MERCURY_ENV=production npm-run-all build-script build:osx build:win",
     "build:osx": "electron-builder --mac",
     "build:linux": "cross-env MERCURY_ENV=production npm-run-all build-script build:linux:*",
     "build:linux:32": "electron-builder --linux --ia32",
@@ -34,8 +34,8 @@
   },
   "dependencies": {
     "@babel/core": "7.5.5",
-    "@blueprintjs/core": "^3.18.0",
-    "@fortawesome/fontawesome-free": "^5.11.2",
+    "@blueprintjs/core": "^3.22.3",
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "@openfonts/nanum-gothic_korean": "^1.44.0",
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "1.13.0",
@@ -44,17 +44,17 @@
     "babel-eslint": "10.0.2",
     "babel-jest": "^24.8.0",
     "babel-loader": "8.0.6",
-    "babel-plugin-named-asset-import": "^0.3.3",
-    "babel-preset-react-app": "^9.0.1",
+    "babel-plugin-named-asset-import": "^0.3.5",
+    "babel-preset-react-app": "^9.1.0",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
-    "electron-context-menu": "^0.15.1",
+    "electron-context-menu": "^0.15.2",
     "electron-prompt": "^1.4.0",
-    "eslint": "^6.1.0",
-    "eslint-config-react-app": "^5.0.1",
+    "eslint": "^6.8.0",
+    "eslint-config-react-app": "^5.1.0",
     "eslint-loader": "2.2.1",
     "eslint-plugin-flowtype": "3.13.0",
     "eslint-plugin-import": "2.18.2",
@@ -64,7 +64,6 @@
     "file-loader": "3.0.1",
     "files-download-zip": "^3.1.1",
     "fs-extra": "7.0.1",
-    "hello-mercury": "^1.0.1",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
@@ -72,17 +71,17 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "0.3.1",
-    "jsdom": "^15.1.1",
+    "jsdom": "^15.2.1",
     "lodash": "^4.17.15",
     "lowdb": "^1.0.0",
     "mercury-core": "file:modules/core",
     "mini-css-extract-plugin": "0.5.0",
     "moment": "^2.24.0",
-    "monaco-editor": "^0.17.1",
-    "monaco-editor-webpack-plugin": "^1.7.0",
-    "node-sass": "^4.12.0",
+    "monaco-editor": "^0.19.0",
+    "monaco-editor-webpack-plugin": "^1.8.1",
+    "node-sass": "^4.13.0",
     "notosans-fontface": "^1.1.0",
-    "npm": "^6.13.2",
+    "npm": "^6.13.4",
     "npm-programmatic": "0.0.12",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
@@ -91,21 +90,20 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
-    "puppeteer": "^2.0.0",
     "quill": "^1.3.7",
-    "quill-better-table": "^1.2.4",
+    "quill-better-table": "^1.2.8",
     "quill-image-drop-module": "^1.0.3",
     "quill-magic-url": "^1.0.3",
-    "re-resizable": "^6.1.0",
-    "react": "^16.9.0",
-    "react-app-polyfill": "^1.0.2",
-    "react-dev-utils": "^9.0.3",
-    "react-dom": "^16.9.0",
+    "re-resizable": "^6.1.1",
+    "react": "^16.12.0",
+    "react-app-polyfill": "^1.0.5",
+    "react-dev-utils": "^9.1.0",
+    "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-inspector": "^3.0.2",
-    "react-redux": "^7.1.1",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4",
+    "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
@@ -125,7 +123,7 @@
   "devDependencies": {
     "concurrently": "^4.1.2",
     "cross-env": "^6.0.3",
-    "electron": "^6.0.2",
+    "electron": "^6.1.7",
     "electron-builder": "^21.2.0",
     "npm-run-all": "^4.1.5",
     "wait-on": "^3.3.0"
