--- a/package.json
+++ b/package.json
@@ -81,10 +81,8 @@
     "moment": "^2.24.0",
     "monaco-editor": "^0.19.0",
     "monaco-editor-webpack-plugin": "^1.8.1",
-    "node": "^12.14.0",
     "node-sass": "^4.13.0",
     "notosans-fontface": "^1.1.0",
-    "npm": "^6.13.4",
     "npm-programmatic": "0.0.12",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
@@ -197,9 +195,9 @@
     ]
   },
   "build": {
-    "productName": "mercury",
+    "productName": "Mercury",
     "appId": "com.cloverhearts.mercury",
-    "asar": true,
+    "asar": false,
     "extraResources": [
       "./build/**",
       "./database/**"
